k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app
spec:
  selector:
    app: my-python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
